--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet">
+<link rel="stylesheet" href="././src/assets/css/all.min.css">
+<link rel="stylesheet" href="././src/assets/css/autocomplete.min.css">
+<link rel="stylesheet" href="././src/assets/css/theme.min.css">
+<link rel="stylesheet" href="././src/assets/css/custom.css">
+<script src="././src/assets/js/jquery.min.js"></script>
+<script type="text/javascript" src="././src/assets/js/blockies.js"></script>
+<script type="text/javascript" src="././src/assets/js/theme-appearance.js"></script>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Etherscan</title>
   </head>
